# DustbinWithQT5

./: CMakeLists.txt  DustbinWithQT5_zh_CN.ts  README.md  camerawindow.cpp  camerawindow.h  imageprocess.cpp  imageprocess.h  main.cpp  main.qml  qml.qrc
.cache/clangd/index/: Python.h.39D9C0F15A8B11B6.idx  Python.h.B052CE618CA221B7.idx  abstract.h.2B1C9CB896F57D3B.idx  abstract.h.5796155C740F2453.idx  abstract.h.C4CE7A60116508AC.idx  abstract.h.F81EA55F5D573A94.idx  bltinmodule.h.30D80715F67024DF.idx  boolobject.h.CFC47E630AACA5E8.idx  bytearrayobject.h.35F9558C1DC32DB9.idx  bytearrayobject.h.698E30F457FA3711.idx  bytearrayobject.h.AE4DDC47D39CC86F.idx  bytearrayobject.h.DC3004CBDDF37437.idx  bytesobject.h.2CBA4C06FA2699C7.idx  bytesobject.h.37CEBAF74F764F0F.idx  bytesobject.h.732524CB5B4ED221.idx  bytesobject.h.F1D76B2E0C410C51.idx  camerathread.cpp.4F32922F913C78C5.idx  camerathread.cpp.93C6DC047AE29B58.idx  camerathread.h.3257D77DAED2FB37.idx  camerathread.h.6D82AB474D97CA0A.idx  camerawindow.cpp.96AD6A8510FED81D.idx  camerawindow.cpp.F48259FEFB8A17E8.idx  camerawindow.h.5CCF651243B8352A.idx  camerawindow.h.871EF79781CAF10E.idx  cellobject.h.E5514DFD741CF4CF.idx  ceval.h.59CC93C8D5BF1100.idx  ceval.h.677FE9722810695B.idx  ceval.h.76A4B25BF7CC7DFD.idx  ceval.h.B78D56CC9F34E29C.idx  classobject.h.60136DFF302C7FB6.idx  code.h.032945600CEC419A.idx  code.h.0A66F08082B3254D.idx  code.h.C266F40A1D1B8BD5.idx  codecs.h.3D186FADD03A62A0.idx  compile.h.7E66EF853009F990.idx  compile.h.91C1977F5A0EEEF2.idx  complexobject.h.27382D4FBA4062EB.idx  complexobject.h.953DCFB13119C6DA.idx  context.h.5CDDCE365714EE20.idx  cpp_python_support.cpp.BCBDDA46C9456B8F.idx  (+134 more)
3rd/python310/include/: object.h  patchlevel.h
3rd/python310/lib/: _tkinter.lib
cppUtils/: camerathread.cpp  camerathread.h  cpp_python_support.cpp  cpp_python_support.h  imagetransmission.cpp  imagetransmission.h
interface/: getbatteryquantity.cpp  getbatteryquantity.h  getdustbinquantity.cpp  getdustbinquantity.h  serialadapter.cpp  serialadapter.h  swtichscene.cpp  swtichscene.h
pages/: CheckTab.qml  CheckTab.qml.autosave  MoreTab.qml  StorgeTab.qml  homeTab.qml
qmlUtils/: BatteryPanel.qml  DustbinProgressBar.qml  HomeTabSceneSignal.qml  HoverPressButton.qml  LinearGradientBackground.qml  NavigationBar.qml  RectangleProgressBar.qml  RowNavigationBar.qml  SlideSwitch.qml
